<resources>
    <string name="app_name">ExpenseCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_expenses">Add Expense</string>
    <string name="title_activity_add_incomes">Add Income</string>
    <string name="title_activity_list">Movement List</string>
    <string name="title_activity_options">Settings</string>
    <string name="title_activity_operations">Frequent Records</string>
    <string name="title_activity_report_date">Reports by Date</string>
    <string name="income_amount">Income Amount</string>
</resources>
