<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/texture_black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">    
  <include
      android:id="@+id/tool_bar"  layout="@layout/appbar"/>

    <ScrollView android:id="@+id/scrollMain" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            
            <FrameLayout android:id="@+id/frameBalanceTop" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
                <LinearLayout android:id="@+id/layoutAddIncomes" style="@style/LayoutLeftMain">
                    <Button android:id="@+id/buttonAddIncome" android:text="@string/title_activity_add_incomes" android:textAllCaps="false" android:drawableTop="@mipmap/coins_plus" style="@style/ButtonMain" />
                </LinearLayout>
                <LinearLayout android:id="@+id/layoutAddExpenses" style="@style/LayoutRightMain">
                    <Button android:id="@+id/buttonAddExpenses" android:text="@string/title_activity_add_expenses" android:textAllCaps="false" android:drawableTop="@mipmap/coins_minus" style="@style/ButtonMain" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
                <LinearLayout android:id="@+id/layoutList" style="@style/LayoutLeftMain">
                    <Button android:id="@+id/buttonList" android:text="@string/title_activity_list" android:textAllCaps="false" android:drawableTop="@mipmap/notepad" style="@style/ButtonMain" />
                </LinearLayout>
                <LinearLayout android:id="@+id/layoutReportDate" style="@style/LayoutRightMain">
                    <Button android:id="@+id/buttonReportDate" android:text="@string/title_activity_report_date" android:textAllCaps="false" android:drawableTop="@mipmap/report_date" style="@style/ButtonMain" />
                </LinearLayout>
            </LinearLayout>
            
            
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
                <LinearLayout android:id="@+id/layoutOperations" style="@style/LayoutLeftMain">
                    <Button android:id="@+id/buttonOperations" android:text="@string/title_activity_operations" android:textAllCaps="false" android:drawableTop="@mipmap/calendar_clock" style="@style/ButtonMain" />
                </LinearLayout>
                <LinearLayout android:id="@+id/layoutOptions" style="@style/LayoutRightMain">
                    <Button android:id="@+id/buttonOptions" android:text="@string/title_activity_options" android:textAllCaps="false" android:drawableTop="@mipmap/options" style="@style/ButtonMain" />
                </LinearLayout>
            </LinearLayout>
            <FrameLayout android:id="@+id/frameBalanceBottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@+id/imageCertificate" android:src="@drawable/circular_button_professional" android:onClick="modePRO" android:contentDescription="@string/hello_world" style="@style/ImageButtonCircle" />
                <ImageView android:id="@+id/imageAbout" android:src="@drawable/circular_button_about" android:onClick="aboutApplication" android:contentDescription="@string/hello_world" style="@style/ImageButtonCircle" />
                <ImageView android:id="@+id/imageQuit" android:src="@drawable/circular_button_shutdown" android:onClick="exitDialog" android:contentDescription="@string/hello_world" style="@style/ImageButtonCircle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <FrameLayout android:id="@+id/frameContainer" android:layout_width="0.0dip" android:layout_height="0.0dip" />
</LinearLayout>